--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
 
     <div class="main-content">
          {{>header}}
+         <p>This site was created by Najib Sheikh. it uses data from weather stack.</p>
          <img class="portrait" src="img/me.png">
     </div>
    
